feat: Complete CI/CD Pipeline Implementation
🚀 Major Platform Enhancement:

✅ CI/CD Pipeline Implementation:
- GitHub Actions workflows for CI/CD
- Automated testing, building, and deployment
- Security scanning (Snyk, CodeQL, Trivy)
- Performance monitoring (Lighthouse, Artillery)
- SonarCloud integration for code quality

✅ Infrastructure as Code:
- Docker containers for API and Web
- docker-compose files for staging/production
- Traefik reverse proxy with SSL
- PostgreSQL and Redis configuration
- Prometheus + Grafana monitoring

✅ Comprehensive Testing Suite:
- Jest configuration for API and Web
- Unit tests for authentication components
- Security test suite for auth endpoints
- Load testing with Artillery
- Code coverage reporting

✅ Security Enhancements:
- Enhanced rate limiting middleware
- Environment configuration validation
- Secure authentication utilities
- Database service layer with Prisma
- Email service for notifications

✅ API Documentation:
- Complete OpenAPI/Swagger specification
- Interactive API documentation
- Production-ready authentication system
- Comprehensive error handling

✅ Development Tools:
- ESLint and Prettier configuration
- TypeScript strict mode
- Automated code formatting
- Git hooks for code quality

🔧 Technical Improvements:
- Port migration to 8000 (API) and 3002 (Web)
- Environment-based configuration
- Logging and monitoring utilities
- Professional email templates
- Comprehensive error handling

📊 Monitoring & Analytics:
- Performance benchmarking
- Security vulnerability scanning
- Code quality metrics
- Deployment automation
- Health check endpoints

This implementation provides a production-ready CI/CD pipeline with automated testing, security scanning, and deployment processes. The platform now supports scalable development workflows with comprehensive monitoring and quality assurance.

--- a/package.json
+++ b/package.json
@@ -12,12 +12,25 @@
   "scripts": {
     "dev": "concurrently \"yarn workspace @counselflow/web dev\" \"yarn workspace @counselflow/api dev\"",
     "build": "yarn workspaces run build",
+    "build:api": "yarn workspace @counselflow/api build",
+    "build:web": "yarn workspace @counselflow/web build",
     "test": "yarn workspaces run test",
+    "test:coverage": "yarn workspaces run test:coverage",
+    "test:ci": "yarn workspaces run test:ci",
     "lint": "yarn workspaces run lint",
-    "clean": "yarn workspaces run clean",
-    "deploy": "docker-compose up -d",
-    "typecheck": "turbo run type-check",
+    "lint:fix": "yarn workspaces run lint:fix",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
+    "clean": "yarn workspaces run clean",
+    "typecheck": "turbo run type-check",
+    "security:audit": "yarn audit --level moderate",
+    "security:fix": "yarn audit fix",
+    "deploy": "docker-compose up -d",
+    "deploy:staging": "docker-compose -f docker-compose.staging.yml up -d",
+    "deploy:prod": "docker-compose -f docker-compose.prod.yml up -d",
+    "docker:build": "docker-compose build",
+    "docker:build:api": "docker build -f apps/api/Dockerfile -t counselflow-api .",
+    "docker:build:web": "docker build -f apps/web/Dockerfile -t counselflow-web .",
     "prisma:generate": "yarn workspace @counselflow/api prisma:generate",
     "prisma:migrate": "yarn workspace @counselflow/api prisma:migrate",
     "prisma:studio": "yarn workspace @counselflow/api prisma:studio",
@@ -35,5 +48,11 @@
   "engines": {
     "node": ">=18.0.0",
     "yarn": ">=1.22.0"
+  },
+  "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
